# ResourceDragon

./: .clangd  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LuaTestFile  PLUGIN_API.md  README.md  ResourceDragon.desktop  build-mingw.sh  build.ps1  build.sh  build_mingw.sh  deploy_linux.sh  deploy_windows.sh  emscripten-server.js  gen-flameshot.sh  imgui.ini  launch-mingw.sh  launch.sh  pack.sh  package.json  test.lua
.github/workflows/: build.yml
.zed/: debug.json  tasks.json
SDK/: ArchiveFormatWrapper.h  CMakeLists.txt  sdk.cpp  sdk.h
SDK/docs/: LOGGING_EXAMPLES.md
SDK/docs/c_or_cpp/: LOGGING_EXAMPLES.md
SDK/docs/rust/: LOGGING_API.md
SDK/util/: Logger.h  Logger.hpp  Stacktrace.h  int.h  platform.h  rd_log.h  rd_log_helpers.h  rd_log_schema.h
assets/linux/: ResourceDragon.appdata.xml  ResourceDragon.desktop
build-scripts/: build_appimage.sh  build_mingw.sh
cmake/: embed-file.cmake  embed-generator.cmake
plug/: CMakeLists.txt
plug/include/: main.h
plug/src/: main.cpp
plugins/: libTestPlugin.so.1.0
plugins/example/: CMakeLists.txt  build.sh  example_plugin.cpp  example_plugin.h  test_c11_logging.c
plugins/nfa0/: Cargo.toml
plugins/nfa0/src/: api.rs  lib.rs  logging.rs
scripts/: test.lua  test.nut
src/: BinaryReader.h  ExtractorManager.h  Icons.h  Net.cpp  Net.h  common.h  hash.cpp  hash.h  icons.h  imconfig.h  main.cpp  main.h  md5.h  sha1.c  sha1.h  state.cpp  state.h  vec2.h  zero_templates.h
src/ArchiveFormats/: ArchiveFormat.cpp  ArchiveFormat.h  CMakeLists.txt  ElfFile.cpp  ElfFile.h  Entry.h  ExeFile.cpp  ExeFile.h  Formats.h
src/ArchiveFormats/HSP/: hsp.cpp  hsp.h
src/ArchiveFormats/Nexas/: pac.cpp  pac.h
src/ArchiveFormats/NitroPlus/: mpk.cpp  mpk.h  nitroplus.h  npa.cpp  npa.h  npk.cpp  npk.h
src/ArchiveFormats/PFS/: pfs.cpp  pfs.h
src/ArchiveFormats/SonicAdv/: pak.cpp  pak.h  sonicadv.h
src/ArchiveFormats/Touhou/: pbg.cpp  pbg.h  thdat.cpp  thdat.h
src/ArchiveFormats/XP3/: _xp3.cpp  xp3-old.cpp  xp3.cpp  xp3.h  xp3entry.h
src/ArchiveFormats/XP3/Crypt/: Crypt.h
src/ArchiveFormats/Zip/: zip.cpp  zip.h
src/GUI/: Audio.cpp  Audio.h  CMakeLists.txt  Clipboard.cpp  Clipboard.h  DirectoryNode.cpp  DirectoryNode.h  ImVec2Util.h  Image.cpp  Image.h  Markdown.cpp  Markdown.h  PreviewWindow.cpp  PreviewWindow.h  Render.cpp  Render.h  Themes.cpp  Themes.h  UIError.cpp  UIError.h  Utils.cpp  Utils.h
src/GUI/HexEditor/: imgui_hex_editor.h
src/GUI/TextEditor/: TextEditor.cpp  TextEditor.h
src/GUI/Theme/: BessDark.cpp  Themes.h
src/GameRes/: Entry.h
src/Plugins/: plugins.cpp  plugins.h
src/ResourceFormats/: DDS.h  dds_formats.h
src/ResourceFormats/DDS/: DDS.h  dds_formats.h
src/Scripting/: CMakeLists.txt  LuaUtils.h  RDSquirrelLib.h  SQUtils.h  SQUtils.hpp  ScriptManager.cpp  ScriptManager.h  SquirrelArc.cpp  SquirrelArc.h  squirrel_all.h
src/Scripting/old/: ScriptManager.h
src/scripting/: ScriptManager.cpp  ScriptManager.h
src/util/: Logger.h  Stacktrace.h  Text.h  Vector.h  WinStackWalk.h  memory.h  platform.h  vec.h
src/util/Logger/: Logger.h  Logger_host.cpp
